Add Audience Targeting into FirehoundBlob
Firehound blob has audience targeting within Context, but this should be moved.
This PR creates an AudienceTargeting item which resides within FirehoundBlob's
Targeting component.

PL-19114

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "psr-0" : {
             "PaperG\\FirehoundBlob" : "src"
         }
+    },
+    "require": {
+        "facebook/php-ads-sdk": "2.5.*"
     }
 }
