Add AN Blob Types
This commit adds constants for the type of AN Blobs available.

PL-22284

--- a/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
+++ b/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
@@ -39,6 +39,12 @@
         "normalSegments": {"$ref": "#/definitions/segmentSetting"},
         "startDate": {"type": "number"},
         "status":{"type": "string"},
-        "type": {"type": "string"}
+        "type": {
+            "type": {
+                "enum":["desktop", "mobile"]
+            }
+        },
+        "uuid": {"type": "string"},
+        "industryId": {"type": "number"}
     }
 }
