Update AN Schema
This commit updates the AN schema to reflect the new creativeDistributionType
field

--- a/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
+++ b/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
@@ -44,6 +44,16 @@
                 "enum":["desktop", "mobile"]
             }
         },
-        "industryId": {"type": "number"}
+        "industryId": {"type": "number"},
+        "creativeDistributionType" : {
+            "oneOf": [
+                {
+                    "type":{
+                        "enum":["even", "ctr-optimized"]
+                    }
+                },
+                {"type": "null"}
+            ]
+        }
     }
 }
