industry id not required

--- a/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
+++ b/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
@@ -54,7 +54,7 @@
                 "enum":["desktop", "mobile"]
             }
         },
-        "industryId": {"type": "number"},
+        "industryId": {"type": ["number", "null"]},
         "creativeDistributionType" : {
             "oneOf": [
                 {
