Revert "Update Json Schema Library"

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
         }
     },
     "require": {
-        "justinrainbow/json-schema": "^5.0"
+        "justinrainbow/json-schema": "~3.0.0"
     }
 }
