Add Mobile Throttle
This commit adds the ability to send mobile throttle settings.

PL-24536

--- a/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
+++ b/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
@@ -65,7 +65,8 @@
                 {"type": "null"}
             ]
         },
-        "throttleMode":{"type": ["boolean", "null"]}
+        "throttleMode":{"type": ["boolean", "null"]},
+        "throttleModeMobile":{"type": ["boolean", "null"]}
     }
 }
 
