Support User Submitted
This commit supports UserSubmitted as a field for AppNexus Blobs

PL-25099

--- a/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
+++ b/src/PaperG/FirehoundBlob/Schema/AppNexus/appNexusBlob.json
@@ -57,7 +57,8 @@
             ]
         },
         "throttleMode":{"type": ["boolean", "null"]},
-        "throttleModeMobile":{"type": ["boolean", "null"]}
+        "throttleModeMobile":{"type": ["boolean", "null"]},
+        "userSubmitted":{"type": ["boolean", "null"]}
     }
 }
 
